@@ -6,12 +6,12 @@ button.addWires=Add Wires
 button.removeWires=Remove Wires
 
 checkBox.plateCharges=Plate Charges
-checkBox.electricFieldLines=Electric Field Lines
+checkBox.eFieldLines=Electric Field Lines
 checkBox.meter.capacitance=Capacitance
 checkBox.meter.charge=Plate Charge
 checkBox.meter.energy=Stored Energy
 checkBox.meter.voltmeter=Voltmeter
-checkBox.meter.fieldDetector=Electric Field Detector
+checkBox.meter.eFieldDetector=Electric Field Detector
 
 label.separation=Separation
 label.plateArea=Plate Area
